# app.ts
@@ -34,7 +34,7 @@ app.use(express.urlencoded({ extended: false }))
 app.use(cookieParser())
 app.use(express.static(path.join(__dirname, 'public')))
 
-app.use('/api/v1/project', projectRouter)
+app.use('/project', projectRouter)
 
 // 404 路由
 app.use((req: Request, res: Response) => {
